--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   cached_network_image: ^3.2.3
+  gallery_saver: ^2.3.2
+  path_provider: ^2.0.11
+  permission_handler: ^10.2.0
 
 
 
