--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   path_provider: ^2.0.11
   permission_handler: ^10.2.0
   intl: ^0.18.0
+  crypto: ^3.0.1
+  flutter_secure_storage: ^8.0.0
+  uuid: ^3.0.7
 
 
 
